--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss-cli": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-scripts": "4.0.1",
     "tailwindcss": "^2.0.2",
     "web-vitals": "^0.2.4"
