--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
+    "firebase": "^8.2.1",
     "postcss": "^8.2.1",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
