--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
     "firebase": "^8.2.1",
+    "formik": "^2.2.6",
     "postcss": "^8.2.1",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
