--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "firebase": "^8.2.1",
     "formik": "^2.2.6",
+    "framer-motion": "^3.1.1",
     "postcss": "^8.2.1",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
